--- a/T3/HtmlPage.html
+++ b/T3/HtmlPage.html
@@ -37,7 +37,7 @@
         console.log("新对象是否存在obj2" + Boolean(bigObj["obj2"]));
         console.log("新对象是否存在obj3,其中obj3已定义" + Boolean(bigObj["obj3"]));
         console.log("新对象是否存在obj4" + Boolean(bigObj["obj4"]));
-        //json
+        ///json
     </script>
     <!--Boolean(false) // false
     Boolean(undefined) // false
