--- a/T3/HtmlPage.html
+++ b/T3/HtmlPage.html
@@ -38,6 +38,7 @@
         console.log("新对象是否存在obj3,其中obj3已定义" + Boolean(bigObj["obj3"]));
         console.log("新对象是否存在obj4" + Boolean(bigObj["obj4"]));
         ///json
+        console.log("新对象是否存在obj4" + Boolean(bigObj["obj4"]));
     </script>
     <!--Boolean(false) // false
     Boolean(undefined) // false
